tealc/files/tekton/install/tekton-dashboard-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tekton-dashboard
  labels:
    app: tekton-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
    project: tealc
spec:
  to:
    kind: Service
    name: tekton-dashboard
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
